Fix mobile community images overflowing

--- a/styles/responsive/mobile/community.css
+++ b/styles/responsive/mobile/community.css
@@ -1,8 +1,12 @@
 @media screen and (max-width: 1024px) {
-	/*==========COMMUNITY==========*/
-	.image-container {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		column-gap: 10px;
-	}
+        /*==========COMMUNITY==========*/
+        body {
+                overflow-x: hidden;
+        }
+        .image-container {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                column-gap: 10px;
+                box-sizing: border-box;
+        }
 }
